<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple"
    tools:context=".Onboarding0Frament"
    android:padding="32dp">

    <ImageView
        android:id="@+id/imagen"
        app:layout_constraintBottom_toTopOf="@id/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/onboarding1_imageDescription"
        android:src="@drawable/ic_onboarding0" />

    <TextView
        android:id="@+id/texto"
        style="@style/OnboardingText"
        app:layout_constraintBottom_toTopOf="@id/botonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding0_text" />

    <Button
        android:id="@+id/botonStart"
        style="@style/OnboardingButton"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/onboarding0_button" />

    <TextView
        android:id="@+id/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/skipText" />

</androidx.constraintlayout.widget.ConstraintLayout>